--- a/client/deno.json
+++ b/client/deno.json
@@ -4,7 +4,8 @@
   "$schema": "https://raw.githubusercontent.com/denoland/deno/refs/heads/v2.1/cli/schemas/config-file.v1.json",
   "tasks": {
     "dev": "deno run -A --env-file=../.env npm:vite",
-    "test": "deno run -A --env-file=../.env npm:vitest run"
+    "test": "deno run -A --env-file=../.env npm:vitest run",
+    "test:coverage": "deno run -A --env-file=../.env npm:vitest run --coverage"
   },
   "imports": {
     "@deno/vite-plugin": "npm:@deno/vite-plugin@^1.0.2",
@@ -14,6 +15,7 @@
     "@testing-library/react": "npm:@testing-library/react@^16.1.0",
     "@types/react": "npm:@types/react@^19.0.2",
     "@vitejs/plugin-react": "npm:@vitejs/plugin-react@^4.3.4",
+    "@vitest/coverage-v8": "npm:@vitest/coverage-v8@^3.0.2",
     "framer-motion": "npm:framer-motion@^11.15.0",
     "jsdom": "npm:jsdom@^25.0.1",
     "lucide-react": "npm:lucide-react@^0.468.0",
